Fix some alignments on the header and middle section.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Times New Roman', Times, serif;
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 .header,
@@ -13,12 +14,18 @@ body {
 
 .header {
     justify-content: space-between;
-    padding-right: 10px;
+    padding-right: 100px;
+    padding-top: 20px;
 }
 
+.footer {
+    justify-content: center;
+    align-items: center;
+}
 .top {
     background-color: #1F2937;
     display: flex;
+    padding: 75px;
 }
 
 #top {
@@ -43,7 +50,7 @@ p {
 .logo {
     font-size: 24px;
     color: #f9faf8;
-    padding-left: 10px;
+    padding-left: 100px;
 }
 
 
@@ -64,7 +71,7 @@ p {
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
-    padding: 100px;
+    padding: 200px;
 }
 
 .middle {
